--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.6
   flutter_snake_navigationbar: ^0.6.1
   badges: ^3.1.2
+  http: ^1.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
